# piso-enfermagem

./: .Renviron.example  .env.example  .gitignore  README.md  pyproject.toml
codigo/: 01 - dados.R  02 - tabelas.R  03 - gráficos.R
output/: tabelas.xlsx
src/piso/: __init__.py  bronze_to_prata.py  cli.py  config.py  constants.py  db.py  deflator.py  prata_to_ouro.py
tests/: test_pipeline.py
