[project]
name = "piso"
version = "0.1.0"
description = "Pipeline de ingestĂŁo e tratamento de dados (bronzeâ†’prataâ†’ouro) do estudo do Piso da Enfermagem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1",
    "pyarrow>=17",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "typer>=0.12",
]

[project.scripts]
piso = "piso.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/piso"]
